--- a/src/App.module.css
+++ b/src/App.module.css
@@ -88,4 +88,9 @@
     text-align: center;
   }
 }
+.russo-one-regular {
+  font-family: "Russo One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
